<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExportExcel">

        <LinearLayout
            android:padding="@dimen/btn_radius"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/excel"
                android:layout_width="180sp"
                android:layout_height="180sp"

                />
            <TextView
                android:layout_marginBottom="@dimen/btn_radius"
                android:gravity="center"
               style="@style/splashScreenText"
                android:text="@string/excel_file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/downloadBtn"
                android:padding="10sp"
                android:drawableLeft="@drawable/ic_file_download_black_24dp"
                android:drawablePadding="8sp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_accent"
                android:layout_width="wrap_content"
                android:text="@string/download"
                android:layout_height="wrap_content" />


        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="16sp"
        android:text="@string/download_hint"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>